attempted to fix bees not showing on webhost, image loading method appends /css to the url which breaks the loading, temporary fix to test animation was to move them to the css root

--- a/app/css/test.css
+++ b/app/css/test.css
@@ -455,7 +455,7 @@ a:visited {
     width: 150px;
     height: 150px;
     animation-delay: 0s;
-    background-image: url(img/bee-crown.png);
+    background-image: url(bee-crown.png);
     background-size: 100%;
   }
   
@@ -466,7 +466,7 @@ a:visited {
     height: 60px;
     animation-delay: 2s;
     animation-duration: 12s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     background-size: 100%;
   }
   
@@ -475,7 +475,7 @@ a:visited {
     width: 150px;
     height: 150px;
     animation-delay: 4s;
-    background-image: url(img/bee-crown.png);
+    background-image: url(bee-crown.png);
     background-size: 100%;
   }
   
@@ -484,7 +484,7 @@ a:visited {
     width: 80px;
     height: 80px;
     animation-delay: 0s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 18s;
   }
   
@@ -492,7 +492,7 @@ a:visited {
     left: 65%;
     width: 60px;
     height: 60px;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-delay: 0s;
   }
   
@@ -500,7 +500,7 @@ a:visited {
     left: 85%;
     width: 110px;
     height: 110px;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-delay: 3s;
   }
   
@@ -508,7 +508,7 @@ a:visited {
     left: 35%;
     width: 80px;
     height: 80px;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-delay: 7s;
   }
   
@@ -517,7 +517,7 @@ a:visited {
     width: 65px;
     height: 65px;
     animation-delay: 15s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 45s;
   }
   
@@ -526,7 +526,7 @@ a:visited {
     width: 55px;
     height: 55px;
     animation-delay: 2s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 35s;
   }
   
@@ -535,7 +535,7 @@ a:visited {
     width: 80px;
     height: 80px;
     animation-delay: 0s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 11s;
   }
   
@@ -543,7 +543,7 @@ a:visited {
     left: 40%;
     width: 80px;
     height: 80px;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-delay: 4s;
   }
   
@@ -552,7 +552,7 @@ a:visited {
     width: 70px;
     height: 70px;
     animation-delay: 8s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 6s;
   }
   
@@ -561,7 +561,7 @@ a:visited {
     width: 60px;
     height: 60px;
     animation-delay: 2s;
-    background-image: url(img/bee-no-crown.png);
+    background-image: url(bee-no-crown.png);
     animation-duration: 8s;
   }
   
